@@ -15,6 +15,7 @@ codebird-php - changelog
 + Add POST media/metadata/create method
 - Fix TON API upload - add additional header parsing
 + Add custom Codebird Exception classes
++ Add Account Activity API methods
 + Add new Direct Messages API
 + Update cacert.pem file
 - Remove sunsetting Direct Messages API
